// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
module.exports = require('M');

=====================================output=====================================
module.exports = require("M");

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var M = require('M');
var N = require('N');
N.x = M(N.x);
var P = require('./P'); // implementation of P redirects to module M
N.y = P(N.y);
var Q = require('Q'); // declaration of Q redirects to module M
N.z = Q(N.z);

=====================================output=====================================
var M = require("M");
var N = require("N");
N.x = M(N.x);
var P = require("./P"); // implementation of P redirects to module M
N.y = P(N.y);
var Q = require("Q"); // declaration of Q redirects to module M
N.z = Q(N.z);

================================================================================
`;
